add vista puntos y equipo

--- a/views/eventos.hbs
+++ b/views/eventos.hbs
@@ -49,6 +49,8 @@
 					<li><a href="/registro">REGISTRATE</a></li>
 					<li><a href="/eventos">EVENTOS</a></li>
 					<li><a href="/salondefama">SALON DE LA FAMA</a></li>
+					<li><a href="/equipo">EQUIPO</a></li>
+
 					<!--<li><a href="#">PATROCINADORES</a></li> -->
 				</ul>
 			</nav>
@@ -59,8 +61,7 @@
 						<header class="major">
 							<h2>Histórico de eventos</h2>
 							<div class="grid-container">
-								<div class="grid-item">0 <br> Actividades realizadas</div>
-								<div class="grid-item">4 <br> Miembros activos</div>
+								<div class="grid-item">1 <br> Actividades realizadas</div>
 								<div class="grid-item">6 <br> Participantes</div>
 							</div>
 						</header>
@@ -87,6 +88,20 @@
 							<div class="content">
 								<h2 style="color: white;">Hablemos de FrontEnd</h2>
 								<p><strong>Fecha:</strong>Lunes, 20 de abril</p>
+								<p><strong>Hora:</strong>06:00 P.M.</p>
+							</div>
+						</a>
+					</article>
+
+					<article class="style1">
+						<span class="image">
+							<img style="width: 140%;" src="images/eventoHDCS.jpg" alt="Imagen evento">
+						</span>
+						<a href="/evento">
+
+							<div class="content">
+								<h2 style="color: white;">Hablemos de ciberseguridad</h2>
+								<p><strong>Fecha:</strong>Lunes, 04 de abril</p>
 								<p><strong>Hora:</strong>06:00 P.M.</p>
 							</div>
 						</a>
@@ -154,9 +169,11 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<section style="align-items: center;">
-				<header class="major"><h2>Nuestras redes sociales</h2></header>
-				
-				
+				<header class="major">
+					<h2>Nuestras redes sociales</h2>
+				</header>
+
+
 			</section>
 			<section style="align-items: center;">
 				<ul class="icons">
@@ -166,8 +183,8 @@
 							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/pubdev" target="_blank"
 							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank" class="icon brands fa-telegram alt"><span
-								class="label">Telegram</span></a></li>
+					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank"
+							class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
 				</ul>
 			</section>
 		</footer>
