--- a/views/generic.hbs
+++ b/views/generic.hbs
@@ -22,6 +22,7 @@
 	<link rel="icon" href="images/icono_low.png">
 	<link rel="stylesheet" href="assets/css/salonFamas1.css" />
 	<link rel="stylesheet" href="assets/css/main.css" />
+
 	<noscript>
 		<link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
@@ -46,27 +47,50 @@
 					<li><a href="/registro">REGISTRATE</a></li>
 					<li><a href="/eventos">EVENTOS</a></li>
 					<li><a href="/salondefama">SALON DE LA FAMA</a></li>
+					<li><a href="/equipo">EQUIPO</a></li>
+
 					<!--<li><a href="#">PATROCINADORES</a></li> -->
 				</ul>
 			</nav>
 
 			<!-- Content -->
 			<section id="content" class="main">
-				<span class=" image"><img src="images/evento1.png" alt="Imagen evento"></span>
-				<h2 style="text-align: center; color: #009688">Primer webinar de PubDev</h2>
-				<h3>Oscar Barajas Tavares</h3>
-				<p>Foundation Layer & Frontend Developer en Platzi, Facebook Developer Lead,
-					ReactJS Developer, Speaker y Blogger.</p>
-				<h3>Herman Orlando Morales López</h3>
-				<p>Frontend Developer con 10 años de experiencia, Mobile developer 3 años
-					de experiencia. Actualmente UX-UI developer. Peleador profesional de MMA
-					Apasionado de Flutter, React, Angular, SpringBoot, Kotlin</p>
-				<h3>Luisa Rodríguez</h3>
-				<p>Front-End dev & Data Analyst. Líder PionerasDev & PyLadies Colombia, co-organizador
-					Git Conf Colombia.</p>
-	
-			
 
+				<h2 style="text-align: center; color: #009688; text-transform:uppercase">Primer webinar de PubDev</h2>
+				<span class=" image" style="width: 50%; display:block; margin:auto; "><img src="images/evento1.png"
+						alt="Imagen evento"></span><br>
+				<h2 style="text-align: center; color: #009688; text-transform:uppercase">Invitados especiales</h2>
+
+				<ul class="features">
+					<li>
+						<div style="width: 18rem; height: 28rem;">
+							<div>
+								<h3>Oscar Barajas Tavares</h3>
+							</div>
+							<p>Foundation Layer & Frontend Developer en Platzi, Facebook Developer Lead,
+								ReactJS Developer, Speaker y Blogger.</p>
+						</div>
+					</li>
+					<li>
+						<div style="width: 18rem; height: 28rem;">
+							<div class="card-body">
+								<h3>Luisa Rodríguez</h3>
+							</div>
+							<p>Front-End dev & Data Analyst. Líder PionerasDev & PyLadies Colombia, co-organizador
+								Git Conf Colombia.</p>
+						</div>
+					</li>
+					<li>
+						<div style="width: 18rem; height: 28rem;">
+							<div class="card-body">
+								<h3>Herman Orlando Morales López</h3>
+							</div>
+							<p>Frontend Developer con 10 años de experiencia, Mobile developer 3 años
+								de experiencia. Actualmente UX-UI developer. Peleador profesional de MMA
+								Apasionado de Flutter, React, Angular, SpringBoot, Kotlin</p>
+						</div>
+					</li>
+				</ul>
 			</section>
 
 		</div>
@@ -88,8 +112,8 @@
 							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/pubdev" target="_blank"
 							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank" class="icon brands fa-telegram alt"><span
-								class="label">Telegram</span></a></li>
+					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank"
+							class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
 				</ul>
 			</section>
 		</footer>
