--- a/views/index.hbs
+++ b/views/index.hbs
@@ -50,6 +50,8 @@
 					<li><a href="/registro">REGISTRATE</a></li>
 					<li><a href="/eventos">EVENTOS</a></li>
 					<li><a href="/salondefama">SALON DE LA FAMA</a></li>
+					<li><a href="/equipo">EQUIPO</a></li>
+
 					<!--<li><a href="#">PATROCINADORES</a></li> -->
 				</ul>
 			</nav>
@@ -86,7 +88,7 @@
 							<div class="card" style="width: 18rem; height: 28rem;">
 								<img src="images/evento1.png" class="card-img-top" alt="...">
 								<div class="card-body">
-									<h3><strong> Primer Webinar de PubDev</strong></h3>
+									<h3><strong class="text-strong">HABLEMOS DE FRONTEND</strong></h3>
 									<h4><strong>Fecha</strong>: 20/Abril/2020 <br>
 										<strong>Hora</strong>: 06:00 P.M.</h4>
 									<p class="card-text"><strong>Invitados especiales: </strong> <br> Oscar Barajas
@@ -95,19 +97,20 @@
 							</div>
 						</a>
 					</li>
-					<!-- <li>
+					<li>
 						<div class="card" style="width: 18rem; height: 28rem;">
-							<img src="images/evento1.png" class="card-img-top" alt="...">
+							<img style="width: 288px; height: 223px;" src="images/eventoHDCS.jpg" class="card-img-top"
+								alt="...">
 							<div class="card-body">
-								<h3><strong> Primer Webinar de PubDev</strong></h3>
-								<h4><strong>Fecha</strong>: 20/Abril/2020 <br>
+								<h3><strong class="text-strong"> Hablemos de ciberseguridad</strong></h3>
+								<h4><strong>Fecha</strong>: 04/Mayo/2020 <br>
 									<strong>Hora</strong>: 06:00 P.M.</h4>
-								<p class="card-text"><strong>Invitados especiales: </strong> <br> Oscar Barajas
-									Tavares, Herman Orlando Morales López y Luisa Rodríguez</p>
+								<p class="card-text"><strong>Invitados especiales: </strong> <br> Cristián Rojas, Kelly
+									Villa y Julio Augusto Rangel</p>
 							</div>
 						</div>
 					</li>
-					<li>
+					<!-- <li>
 						<div class="card" style="width: 18rem; height: 28rem;">
 							<img src="images/evento1.png" class="card-img-top" alt="...">
 							<div class="card-body">
@@ -127,19 +130,65 @@
 				</footer>
 			</section>
 
-			<!-- CALENDARIO 
-			<section id="second" class="main special">
+
+			<!--  EQUIPO ORGANIZADOR-->
+
+			<section id="first" class="main special">
 				<header class="major">
-					<h2>CALENDARIO</h2>
-					<p>En construcción...</p>
+					<h2>EQUIPO ORGANIZADOR</h2>
 				</header>
-				<img src="images/calendar-3170987.png" alt="..." style="width: 50%;">
+				<ul class="features">
+					<li>
+						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
+								src="images/DANA.png" alt="" /></span>
+						<h3>Dana Yeraldinne García</h3>
+						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
+							consequat.</p>
+					</li>
+					<li>
+						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
+								src="images/evento1.png" alt="" /></span>
+						<h3>Amed sed feugiat</h3>
+						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
+							consequat.</p>
+					</li>
+					<li>
+						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
+								src="images/evento1.png" alt="" /></span>
+						<h3>Dolor nullam</h3>
+						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
+							consequat.</p>
+					</li>
+					<li>
+						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
+								src="images/evento1.png" alt="" /></span>
+						<h3>Ipsum consequat</h3>
+						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
+							consequat.</p>
+					</li>
+					<li>
+						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
+								src="images/evento1.png" alt="" /></span>
+						<h3>Amed sed feugiat</h3>
+						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
+							consequat.</p>
+					</li>
+					<li>
+						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
+								src="images/evento1.png" alt="" /></span>
+						<h3>Dolor nullam</h3>
+						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
+							consequat.</p>
+					</li>
+				</ul>
 				<footer class="major">
 					<ul class="actions special">
-						<li><a href="#" class="button">Learn More</a></li>
+						<li><a href="/equipo" class="button">Ver más</a></li>
 					</ul>
 				</footer>
-			</section> -->
+			</section>
+
+
 
 			<!-- SALON DE LA FAMA -->
 			<section id="cta" class="main special">
@@ -225,8 +274,8 @@
 							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
 					<!--<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-github alt"><span
 								class="label">GitHub</span></a></li> -->
-					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank" class="icon brands fa-telegram alt"><span
-								class="label">Telegram</span></a></li>
+					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank"
+							class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
 				</ul>
 
 				<h4 class="right">Hecho con el ♥</h4>
