--- a/views/salonFama.hbs
+++ b/views/salonFama.hbs
@@ -46,6 +46,8 @@
 					<li><a href="/registro">REGISTRATE</a></li>
 					<li><a href="/eventos">EVENTOS</a></li>
 					<li><a href="/salondefama">SALON DE LA FAMA</a></li>
+					<li><a href="/equipo">EQUIPO</a></li>
+
 					<!--<li><a href="#">PATROCINADORES</a></li> -->
 				</ul>
 			</nav>
@@ -58,13 +60,17 @@
 						</header>
 						<p style="text-align: justify;">“Robot: ¿Cuál es mi propósito? – Rick: Pasar la mantequilla. –
 							Robot: Oh, por Dios. – Rick: Sí, bienvenido al club, amigo.”</p>
-						<ul class="actions">
+						<!-- <ul class="actions">
 							<li><a href="#" class="button">Conocer más...</a></li>
-						</ul>
+						</ul> -->
 					</div>
 					<span class="image"><img src="images/rick.gif" alt="" /></span>
 				</div>
+
+				<a href="/puntos">¿Cómo ganar puntos?</a>
+
 			</section>
+
 
 			<!-- Content -->
 			<section id="content" class="main">
@@ -105,8 +111,8 @@
 							class="icon brands fa-facebook-f alt"><span class="label">Facebook</span></a></li>
 					<li><a href="https://www.instagram.com/pubdev" target="_blank"
 							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
-					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank" class="icon brands fa-telegram alt"><span
-								class="label">Telegram</span></a></li>
+					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank"
+							class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
 				</ul>
 			</section>
 		</footer>
