ERROR PANTALLA INFINITA ARREGLADO

--- a/views/equipo.hbs
+++ b/views/equipo.hbs
@@ -55,11 +55,13 @@
 
             <!-- Contenido -->
 
+            <!-- SEBASTIAN -->
+
             <section id="intro" class="main">
                 <div class="spotlight">
                     <div class="content">
                         <header class="major">
-                            <h2>Dana Yeraldinne García </h2>
+                            <h2>Sebastian Roa Meneses </h2>
                         </header>
                         <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
                             adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
@@ -78,75 +80,163 @@
 
                         </footer>
                     </div>
-                    <span class="image"><img src="images/DANA.png" alt="" /></span>
+                    <span class="image"><img src="images/sebas.jpg" alt="" /></span>
                 </div>
+                </section>
 
-            </section>
-            <section id="intro" class="main">
-                <div class="spotlight">
-                    <div class="content">
-                        <header class="major">
-                            <h2>Ipsum sed adipiscing</h2>
-                        </header>
-                        <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-                            adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-                            Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+                <!-- DANA -->
+
+                <section id="intro" class="main">
+                    <div class="spotlight">
+                        <div class="content">
+                            <header class="major">
+                                <h2>Dana Yeraldinne García </h2>
+                            </header>
+                            <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
+                                adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
+                                Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+                            <footer class="major">
+                                <ul class="icons">
+                                    <li><a href="https://twitter.com/yeralcoqueco" class="icon brands fa-twitter alt"><span
+                                                class="label">Twitter</span></a></li>
+                                    <li><a href="#" class="icon brands fa-facebook-f alt"><span
+                                                class="label">Facebook</span></a></li>
+                                    <li><a href="#" class="icon brands fa-instagram alt"><span
+                                                class="label">Instagram</span></a></li>
+                                    <li><a href="#" class="icon brands fa-github alt"><span
+                                                class="label">GitHub</span></a>
+                                    </li>
+                                </ul>
+
+                            </footer>
+                        </div>
+                        <span class="image"><img src="images/DANA.png" alt="" /></span>
                     </div>
-                    <span class="image"><img src="images/pic01.jpg" alt="" /></span>
-                </div>
-            </section>
-            <section id="intro" class="main">
-                <div class="spotlight">
-                    <div class="content">
-                        <header class="major">
-                            <h2>Ipsum sed adipiscing</h2>
-                        </header>
-                        <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-                            adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-                            Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+                    </section>
+
+                <!-- JUAN EDISON -->
+
+                <section id="intro" class="main">
+                    <div class="spotlight">
+                        <div class="content">
+                            <header class="major">
+                                <h2>Juan Edison Giraldo Zuluaga </h2>
+                            </header>
+                            <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
+                                adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
+                                Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+                            <footer class="major">
+                                <ul class="icons">
+                                    <li><a href="#" class="icon brands fa-twitter alt"><span
+                                                class="label">Twitter</span></a></li>
+                                    <li><a href="#" class="icon brands fa-facebook-f alt"><span
+                                                class="label">Facebook</span></a></li>
+                                    <li><a href="#" class="icon brands fa-instagram alt"><span
+                                                class="label">Instagram</span></a></li>
+                                    <li><a href="#" class="icon brands fa-github alt"><span
+                                                class="label">GitHub</span></a>
+                                    </li>
+                                </ul>
+
+                            </footer>
+                        </div>
+                        <span class="image"><img src="images/avatar2.webp" alt="" /></span>
                     </div>
-                    <span class="image"><img src="images/pic01.jpg" alt="" /></span>
-                </div>
-            </section>
-            <section id="intro" class="main">
-                <div class="spotlight">
-                    <div class="content">
-                        <header class="major">
-                            <h2>Ipsum sed adipiscing</h2>
-                        </header>
-                        <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-                            adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-                            Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+                    </section>
+
+
+                <!-- BAUTISTA -->
+
+                <section id="intro" class="main">
+                    <div class="spotlight">
+                        <div class="content">
+                            <header class="major">
+                                <h2>Juan Bautista</h2>
+                            </header>
+                            <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
+                                adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
+                                Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+                            <footer class="major">
+                                <ul class="icons">
+                                    <li><a href="#" class="icon brands fa-twitter alt"><span
+                                                class="label">Twitter</span></a></li>
+                                    <li><a href="#" class="icon brands fa-facebook-f alt"><span
+                                                class="label">Facebook</span></a></li>
+                                    <li><a href="#" class="icon brands fa-instagram alt"><span
+                                                class="label">Instagram</span></a></li>
+                                    <li><a href="#" class="icon brands fa-github alt"><span
+                                                class="label">GitHub</span></a>
+                                    </li>
+                                </ul>
+
+                            </footer>
+                        </div>
+                        <span class="image"><img src="images/avatar2.webp" alt="" /></span>
                     </div>
-                    <span class="image"><img src="images/pic01.jpg" alt="" /></span>
-                </div>
-            </section>
-            <section id="intro" class="main">
-                <div class="spotlight">
-                    <div class="content">
-                        <header class="major">
-                            <h2>Ipsum sed adipiscing</h2>
-                        </header>
-                        <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-                            adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-                            Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+                    </section>
+
+                    <!-- ANDRES FELIPE -->
+
+                    <section id="intro" class="main">
+                    <div class="spotlight">
+                        <div class="content">
+                            <header class="major">
+                                <h2>Andrés Felipe Peña Ramirez </h2>
+                            </header>
+                            <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
+                                adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
+                                Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+                            <footer class="major">
+                                <ul class="icons">
+                                    <li><a href="#" class="icon brands fa-twitter alt"><span
+                                                class="label">Twitter</span></a></li>
+                                    <li><a href="#" class="icon brands fa-facebook-f alt"><span
+                                                class="label">Facebook</span></a></li>
+                                    <li><a href="#" class="icon brands fa-instagram alt"><span
+                                                class="label">Instagram</span></a></li>
+                                    <li><a href="#" class="icon brands fa-github alt"><span
+                                                class="label">GitHub</span></a>
+                                    </li>
+                                </ul>
+
+                            </footer>
+                        </div>
+                        <span class="image"><img src="images/avatar2.webp" alt="" /></span>
                     </div>
-                    <span class="image"><img src="images/pic01.jpg" alt="" /></span>
-                </div>
-            </section>
-            <section id="intro" class="main">
-                <div class="spotlight">
-                    <div class="content">
-                        <header class="major">
-                            <h2>Ipsum sed adipiscing</h2>
-                        </header>
-                        <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
-                            adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
-                            Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+                    </section>
+
+                    <!-- ALEX -->
+
+                    <section id="intro" class="main">
+                    <div class="spotlight">
+                        <div class="content">
+                            <header class="major">
+                                <h2>Alex Andrés Palencia </h2>
+                            </header>
+                            <p>Sed lorem ipsum dolor sit amet nullam consequat feugiat consequat magna
+                                adipiscing magna etiam amet veroeros. Lorem ipsum dolor tempus sit cursus.
+                                Tempus nisl et nullam lorem ipsum dolor sit amet aliquam.</p>
+                            <footer class="major">
+                                <ul class="icons">
+                                    <li><a href="#" class="icon brands fa-twitter alt"><span
+                                                class="label">Twitter</span></a></li>
+                                    <li><a href="#" class="icon brands fa-facebook-f alt"><span
+                                                class="label">Facebook</span></a></li>
+                                    <li><a href="#" class="icon brands fa-instagram alt"><span
+                                                class="label">Instagram</span></a></li>
+                                    <li><a href="#" class="icon brands fa-github alt"><span
+                                                class="label">GitHub</span></a>
+                                    </li>
+                                </ul>
+
+                            </footer>
+                        </div>
+                        <span class="image"><img src="images/avatar2.webp" alt="" /></span>
                     </div>
-                    <span class="image"><img src="images/pic01.jpg" alt="" /></span>
-                </div>
-            </section>
+                    </section>
+
+
+
         </div>
 
 
