--- a/views/eventos.hbs
+++ b/views/eventos.hbs
@@ -62,14 +62,13 @@
 							<h2>Histórico de eventos</h2>
 							<div class="grid-container">
 								<div class="grid-item">1 <br> Actividades realizadas</div>
-								<div class="grid-item">6 <br> Participantes</div>
+								<div class="grid-item">28 <br> Participantes</div>
 							</div>
 						</header>
 						<!-- <ul class="actions">
 							<li><a href="#" class="button">Conocer más...</a></li>
 						</ul> -->
 					</div>
-					<span class="image"><img src="images/evento2.jpg" alt="" /></span>
 				</div>
 
 				<header class="major">
@@ -97,7 +96,7 @@
 						<span class="image">
 							<img style="width: 140%;" src="images/eventoHDCS.jpg" alt="Imagen evento">
 						</span>
-						<a href="/evento">
+						<a href="/evento2">
 
 							<div class="content">
 								<h2 style="color: white;">Hablemos de ciberseguridad</h2>
