--- a/views/generic1.hbs
+++ b/views/generic1.hbs
@@ -53,14 +53,13 @@
 				</ul>
 			</nav>
 
-
-<!-- Content -->
+			<!-- Content -->
 			<section id="content" class="main">
 
 				<header class="major main special">
-					<h2>HABLEMOS DE FRONTEND</h2>
+					<h2>HABLEMOS DE CIBERSEGURIDAD</h2>
 				</header> <span class=" image" style="width: 70%; display:block; margin:auto; "><img
-						src="images/evento1.png" alt="Imagen evento"></span><br>
+						src="images/eventoHDCS.jpg" alt="Imagen evento"></span><br>
 
 				<section id="first" class="main special">
 					<header class="major">
@@ -69,36 +68,48 @@
 					<ul class="features">
 						<li>
 							<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
-									src="images/oscar.jpg" alt="" /></span>
-							<h3 style="text-transform: uppercase;">Oscar Barajas Tavares</h3>
-							<p style="text-align: justify;">Foundation Layer & Frontend Developer en Platzi, Facebook Developer Lead,
-								ReactJS Developer, Speaker y Blogger.</p>
+									src="images/cristian.jpg" alt="" /></span>
+							<h3 style="text-transform: uppercase;">CRISTIÁN ROJAS</h3>
+							<p style="text-align: justify;">Profesor, consultor y expositor en ciberseguridad.
+
+								Consultor en Seguridad de la Información, ofrece a compañías y startups servicios de
+								implementación, consultoría, coaching y cursos en desarrollo seguro de software,
+								ciberseguridad y políticas de seguridad TI.
+								Profesor de Ciberseguridad en 3 universidades (Universidad de Chile, Pontificia
+								Universidad Católica de Chile, Universidad Adolfo Ibañez) y conferencista de seguridad
+								en eventos.</p>
 							</p>
 						</li>
 						<li>
 							<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
-									src="images/luisa.jpg" alt="" /></span>
-							<h3 style="text-transform: uppercase;">Luisa Rodríguez</h3>
-							<p style="text-align: justify;">Front-End dev & Data Analyst. Líder PionerasDev & PyLadies Colombia, co-organizador
-								Git Conf Colombia.</p>
+									src="images/kelly.jpg" alt="" /></span>
+							<h3 style="text-transform: uppercase;">Kelly Villa</h3>
+							<p style="text-align: justify;">Full Stack Dev en Holberton School, miembro de Pioneras
+								Developers (líder nodo
+								Barranquilla)
+								Le gusta el desarrollo web, hacer laboratorios de seguridad, ha pertenecido a proyectos
+								de aseguramiento perimetral.
+								Investigación en curso que se centra en la seguridad y hacking sobre plataformas IoT.
+							</p>
 						</li>
 						<li>
 							<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
-									src="images/herman.jpg" alt="" /></span>
-							<h3 style="text-transform: uppercase;">Herman Orlando Morales López</h3>
-							<p style="text-align: justify;">Frontend Developer con 10 años de experiencia, Mobile developer 3 años
-								de experiencia. Actualmente UX-UI developer. Peleador profesional de MMA
-								Apasionado de Flutter, React, Angular, SpringBoot, Kotlin</p>
+									src="images/julio.jpg" alt="" /></span>
+							<h3 style="text-transform: uppercase;">Julio Augusto Rangel Medina</h3>
+							<p style="text-align: justify;">Consultor/Asesor en Desarrollo, implementación y seguridad
+								web, bugHunter, pentester.</p>
 						</li>
 					</ul>
 					<footer class="major">
 						<ul class="actions special">
-							<li><a target="_blank" href="https://www.youtube.com/watch?v=q0df3EdriYA"
+							<li><a target="_blank" href="https://www.youtube.com/channel/UCkWzkTACfvry7fwIkFRoKIQ"
 									class="button">VER WEBINAR</a></li>
 						</ul>
 					</footer>
 				</section>
 			</section>
+
+
 		</div>
 
 		<!--Footer-->
@@ -107,6 +118,8 @@
 				<header class="major">
 					<h2>Nuestras redes sociales</h2>
 				</header>
+
+
 			</section>
 			<section style="align-items: center;">
 				<ul class="icons">
