--- a/views/index.hbs
+++ b/views/index.hbs
@@ -140,43 +140,44 @@
 				<ul class="features">
 					<li>
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
+								src="images/sebas.jpg" alt="" /></span>
+						<h3>Sebastian Roa Meneses</h3>
+						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
+							consequat.</p>
+					</li>
+					<li>
+						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
 								src="images/DANA.png" alt="" /></span>
 						<h3>Dana Yeraldinne García</h3>
+						<p>Estudiante de Ingeniería de Software.
+							<br> React Developer
+						</p>
+					</li>
+					<li>
+						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
+								src="images/avatar2.webp" alt="" /></span>
+						<h3>Juan Edison Giraldo Zuluaga</h3>
 						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
 							consequat.</p>
 					</li>
 					<li>
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
-								src="images/evento1.png" alt="" /></span>
-						<h3>Amed sed feugiat</h3>
+								src="images/avatar2.webp" alt="" /></span>
+						<h3>Juan Bautista</h3>
 						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
 							consequat.</p>
 					</li>
 					<li>
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
-								src="images/evento1.png" alt="" /></span>
-						<h3>Dolor nullam</h3>
+								src="images/avatar2.webp" alt="" /></span>
+						<h3>Andrés Felipe Peña Ramirez</h3>
 						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
 							consequat.</p>
 					</li>
 					<li>
 						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
-								src="images/evento1.png" alt="" /></span>
-						<h3>Ipsum consequat</h3>
-						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
-							consequat.</p>
-					</li>
-					<li>
-						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
-								src="images/evento1.png" alt="" /></span>
-						<h3>Amed sed feugiat</h3>
-						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
-							consequat.</p>
-					</li>
-					<li>
-						<span class="icon major "><img style="width: 200px; height: 200px; border-radius: 100%;"
-								src="images/evento1.png" alt="" /></span>
-						<h3>Dolor nullam</h3>
+								src="images/alex.jpg" alt="" /></span>
+						<h3>Alex Andrés Palencia</h3>
 						<p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed
 							consequat.</p>
 					</li>
