--- a/views/puntos.hbs
+++ b/views/puntos.hbs
@@ -34,11 +34,9 @@
 		<!-- Header -->
 		<header id="header" class="alt">
 			<h1><strong>PUNTOS DE PARTICIPACIÓN</strong></h1>
-			<p>Gana puntos y conviertete en la persona más reconocida de PubDev, haz parte de nuestros eventos y actividades. Enterate como ganar más puntos</p>
+			<p>Gana puntos y conviertete en la persona más reconocida de PubDev, haz parte de nuestros eventos y
+				actividades. Enterate como ganar más puntos</p>
 		</header>
-
-		<!-- Nav -->
-
 
 		<!-- Main -->
 		<div id="main">
@@ -120,8 +118,8 @@
 							class="icon brands fa-instagram alt"><span class="label">Instagram</span></a></li>
 					<!--<li><a href="https://github.com/PubDevs" target="_blank" class="icon brands fa-github alt"><span
 								class="label">GitHub</span></a></li> -->
-					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank" class="icon brands fa-telegram alt"><span
-								class="label">Telegram</span></a></li>
+					<li><a href="https://t.me/joinchat/DS7d-VbynYfq5sKTrMDYtA" target="_blank"
+							class="icon brands fa-telegram alt"><span class="label">Telegram</span></a></li>
 				</ul>
 
 				<h4 class="right">Hecho con el ♥</h4>
